--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,7 +16,7 @@ $number: 4em;
 $font-stack-b: 'IBM Plex Mono', -apple-system, sans-serif;
 $large-text: 2.667em;
 $large-line-height: 1.25;
-$medium-text: 2em;
+$medium-text: 1.444em;
 $medium-line-height: 1.15;
 $small-text: 0.778em;
 
